switched to bootstrap

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6,3 +6,11 @@
     float: right;
     vertical-align: middle;
 }
+
+.leftmargin {
+    margin-left: 20px;
+}
+
+.hidden {
+    visibility: hidden;
+}
